# generic-prometheus

./: README.md  generic-prometheus.cabal  stack.yaml
examples/: Example.hs
src/: GenericPrometheus.hs
src/GenericPrometheus/: Lib.hs
