cabal-version: 2.4
name:          generic-prometheus
version:       0.1.0.0
description:   See README.md
build-type:    Simple

library
  hs-source-dirs: src
  exposed-modules:
    GenericPrometheus
  build-depends:
    , async
    , base
    , generic-lens
    , lens
    , mtl
    , prometheus-client
    , prometheus-metrics-ghc
    , text
    , wai-middleware-prometheus
    , warp
  default-language: Haskell2010
  ghc-options: -Wall -Werror
